Fix proportions on smaller screens

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -3,10 +3,11 @@
 }
 
 body {
-  width: 100%;
   background-color: #e7e7e9;
-  margin: 17em 2em 2em;
-  font-family: sans-serif;
+  margin: 17em 0 0;
+  padding: 0;
+  font-size: 17px/1.4;
+  font-family: "Open Sans", sans-serif;
   overflow-x: hidden;
 }
 
@@ -28,7 +29,6 @@ body {
 }
 
 .profile-card {
-  // overflow: hidden;
   position: relative;
   width: 480px;
   margin: 0 auto;
